docs: add what's-next chapters